[gd_scene load_steps=8 format=3 uid="uid://cf05mjhcwgegs"]

[ext_resource type="Script" path="res://scripts/auction_menu.gd" id="1_r0rxc"]
[ext_resource type="Texture2D" uid="uid://nryt1is5p6vm" path="res://art/UI/UI_Wood_C_Border.png" id="1_ssq67"]
[ext_resource type="Script" path="res://scripts/backButton.gd" id="2_t4txg"]
[ext_resource type="Texture2D" uid="uid://deok2v6fn8pdd" path="res://art/UI/Pixel UI/Colors/Yellow/yellow_spritesheet.png" id="4_57w68"]

[sub_resource type="AtlasTexture" id="AtlasTexture_adlkw"]
atlas = ExtResource("4_57w68")
region = Rect2(0, 0, 70, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs8a8"]
atlas = ExtResource("4_57w68")
region = Rect2(0, 98, 70, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwg8e"]
atlas = ExtResource("1_ssq67")
region = Rect2(223.527, 287.623, 32.8422, 32.8422)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_r0rxc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 713.0
offset_bottom = 1285.0
color = Color(0.191727, 0.678146, 0.795431, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 281.0
offset_top = 17.0
offset_right = 526.0
offset_bottom = 104.0
text = "AUCTION HOUSE"

[node name="Buy" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 259.0
offset_right = 20.0
offset_bottom = 259.0

[node name="GridContainer" type="GridContainer" parent="Buy"]
layout_mode = 0
offset_left = 13.0
offset_top = 63.0
offset_right = 687.0
offset_bottom = 899.0
columns = 2

[node name="BuyButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 142.0
offset_top = 152.0
offset_right = 312.0
offset_bottom = 218.0
disabled = true
texture_normal = SubResource("AtlasTexture_adlkw")
texture_disabled = SubResource("AtlasTexture_vs8a8")
stretch_mode = 0

[node name="SellButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 387.0
offset_top = 151.0
offset_right = 557.0
offset_bottom = 217.0
texture_normal = SubResource("AtlasTexture_adlkw")
texture_disabled = SubResource("AtlasTexture_vs8a8")
stretch_mode = 0

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 25.0
offset_top = 22.0
offset_right = 119.0
offset_bottom = 111.0
texture_normal = SubResource("AtlasTexture_cwg8e")
stretch_mode = 0
script = ExtResource("2_t4txg")

[connection signal="pressed" from="BuyButton" to="." method="_buy_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_sell_pressed"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
